# VirtualTelescope

./: CMakeLists.txt
src/: CMakeLists.txt  IERS.cpp  IERS.h  PointModel.cpp  PointModel.h  TelescopeContext.cpp  TelescopeContext.h  VirtualTelescope.cpp  VirtualTelescope.h  VirtualTelescopeEncoderToSky.cpp  VirtualTelescopeEncoderToSky.h  VirtualTelescopeSkyToEncoder.cpp  VirtualTelescopeSkyToEncoder.h  VirtualTelescopeSkyToPointingOrigin.cpp  VirtualTelescopeSkyToPointingOrigin.h  main.cpp
tests/: test.cpp
